--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
 
     <properties>
         <avro.version>1.7.7</avro.version>
-        <datio-spark-utils.version>1.1.0-2.2.1</datio-spark-utils.version>
+        <datio-spark-utils.version>2.0.5-2.2.1</datio-spark-utils.version>
         <datio-spark-tests.version>1.0.1-2.2.1</datio-spark-tests.version>
         <datio-spark-bdt.version>1.0.0-2.2.1</datio-spark-bdt.version>
         <slf4j.version>1.7.6</slf4j.version>
-        <amlib.version>1.0.0</amlib.version>
-
+        <kirby.version>2.12.6</kirby.version>
+        <datahub.pe-utils.version>0.3.8</datahub.pe-utils.version>
     </properties>
 
     <dependencyManagement>
