--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ buildNumber.properties
 
 testAT/src/test/resources/docker/datio/spark/lib
 developercertexercises/src/test/resources/data/output/
+testAT/src/test/resources/data/output/
